code clean & gradle build update